Update ios environment setup instructions and add logout functionality to user avatar

--- a/package.json
+++ b/package.json
@@ -195,7 +195,9 @@
       "@typescript-eslint/no-explicit-any": 0,
       "@typescript-eslint/no-object-literal-type-assertion": 0,
       "@typescript-eslint/no-empty-interface": 0,
-      "@typescript-eslint/no-var-requires": 0
+      "@typescript-eslint/no-var-requires": 0,
+      "react-native/no-inline-styles": 0,
+      "react-native/no-color-literals": 0
     }
   },
   "react-native": {
